# SpectraForge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  polar_tunnel.glsl  render_all.sh  vis.glsl
exmaples/: Costco Boom Guys.txt
shaders/: beach_church.glsl  neon_sine_split.glsl  rover_seasons_loop.glsl  volumetric_clouds.glsl
shaders/with_audio/: abstract_shine.glsl  aurora_paint.glsl  van_gogh_sunset.glsl
shaders/without_audio/: abstract_shine.glsl  accretion.glsl  arc_lattice.glsl  aurora_paint.glsl  beach_church.glsl  bokeh_bloom.glsl  bokeh_tunnel.glsl  feedback_bloom.glsl  fractal_orb.glsl  glow_flow.glsl  limacon_glow.glsl  logpolar_bloom.glsl  logpolar_tunnel.glsl  moonlit_ocean.glsl  neon_shells.glsl  neon_sine_split.glsl  petal_bloom.glsl  plasma_core.glsl  polar_tunnel.glsl  radial_beam.glsl  ribbon_flow.glsl  searchlight_beam.glsl  silicon_tombs.glsl  sine_glow_split.glsl  spiral_tiles.glsl  tunnel_shine.glsl  van_gogh_sunset.glsl  vis.glsl  volumetric_clouds.glsl  vortex.glsl
src/: align.rs  analysis.rs  audio.rs  encode.rs  lyrics.rs  main.rs  render.rs  subtitle.rs  text.rs
