[package]
name = "SpectraForge"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fontdb = "0.23.0"
glow = "0.17.0"
khronos-egl = { version = "6.0.0", features = ["dynamic", "1_5"] }
libloading = "0.9.0"
rustfft = "6.4.1"
symphonia = { version = "0.6.0", features = ["mp3"] }
